# blockgame

./: CMakeLists.txt  blockgame.sln  opengl.sln
blockgame/: blockgame.vcxproj  blockgame.vcxproj.filters
blockgame/dat/: chunks.txt
blockgame/data/: save.txt
blockgame/src/: camera.cpp  camera.h  console.cpp  console.h  effects.h  game.cpp  game.h  global.cpp  global.h  inventory.cpp  inventory.h  light.cpp  light.h  main.cpp  perlin.h  player.cpp  player.h  shader.fs  shader.h  shader.vs  terrain.cpp  terrain.h  threadpool.cpp  threadpool.h  ui.cpp  ui.h  ui_shader.fs  ui_shader.vs  world.cpp  world.h  world_shader.fs  world_shader.vs
game/: game.vcxproj  game.vcxproj.filters
game/src/: camera.h  light.h  main.cpp  shader.fs  shader.h  shader.vs  terrain.h
res/data/: save.txt
res/shaders/: world_shader.fs  world_shader.vs
src/: camera.cpp  effects.cpp  game.cpp  global.cpp  inventory.cpp  inventory.h  main.cpp  player.cpp  player.h  terrain.cpp  terrain.h  threadpool.cpp  ui.cpp  ui.h  world.cpp
